objects/PMC_DH_DocumentType__mdt.object
<CustomObject>
    <description>Metadata for Document types</description>
    <fields>
        <fullName>PMC_DH_Billing_Type__c</fullName>
        <label>Billing Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_DH_DocumentCode__c</fullName>
        <label>Document Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Identifier__c</fullName>
        <label>Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Digital Hub Document Type</label>
    <pluralLabel>Digital Hub Document Types</pluralLabel>
</CustomObject>